SONAR-21139 fixed the issue where creating custom rule for security hotspot would set clean code attribute